# air-quality-sensor

./: .clang-tidy  .gitignore  README.md  avr-cross-ubuntu2404.ini  avr-cross.ini  callbacks.hpp  config.h  main.cpp  meson.build
16bit-accelerator/: __dsu_funcs.S  dsu_defs.S  dsu_funcs.h  dsu_funcs2.cpp  dsu_funcs2.hpp  meson.build  test_main.cpp
components/: blink.hpp  core.hpp  gas_sensor.hpp  i2c_port.hpp  rolling-display.hpp  serial.hpp  seven-segment-display.hpp  temperature_sensor.hpp  the_main_app.hpp
data-models/: ahtx0_commands.hpp  display-commands.hpp  ens160_commands.hpp  environment.hpp  ht16k33_commands.hpp  i2c_types.hpp  timing.hpp
subprojects/: Adafruit_BusIO.wrap  Adafruit_GFX.wrap  Adafruit_LED_Backpack.wrap  adafruit_ahtx0.wrap  adafruit_sensor.wrap  arduinocore-avr.wrap  avr-libstdcpp.wrap  compile-time-init-build.wrap  conc.wrap  ens160.wrap  stdx.wrap
subprojects/packagefiles/Encoder/: meson.build
subprojects/packagefiles/adafruit_ahtx0/: meson.build
subprojects/packagefiles/adafruit_sensor/: meson.build
subprojects/packagefiles/ens160/: meson.build
subprojects/packagefiles/stdx/: meson.build
test_framework/: mcu_tests.hpp  meson.build  test_main.cpp  test_report.txt
tools/: get_component_tree.py  get_flow_graph.py  meson.build  read_tap_from_serial.py
utils/: big_endian.hpp  clamp.hpp  log2.hpp  pgm_string.hpp  rational.hpp  small_vector.hpp  units.hpp
